        Class LargeInteger:
            - New routine hash(), which hashes the integer down to a size_t.
            - New routine str(), which is an alias for stringValue().
            - New class constant supportsInfinity, which is set to true.
        Class Laurent<T>, Laurent2<T>:
            - New routine hash(), which uses the tight encoding.
        Class Link:
            - New routine hash(), which uses the tight encoding.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - Optimised so that computed topological properties (e.g., Jones
              and HOMFLY-PT polynomials) are preserved through operations that
              do not change the topology (e.g., Reidemeister moves).
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
              Also fixed a problem where the C++ initialiser lists were empty
              (instead of containing a single 0) for zero-crossing components.
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Matrix<T>:
            - Added destructive and non-destructive rank() functions.
            - New routines negateRow() and negateCol().
        Class NativeInteger<bytes>:
            - New routine str().
        Class NormalSurface, NormalHypersurface:
            - Fixed a bug where, if a surface was a normalised triangle link
              but not a thin triangle link, then calling isThinTriangleLink()
              _before_ isNormalTriangleLink() would make the latter return